# ByteIDE

./: .gitignore  CHANGELOG.md.md  CMakeLists.txt  CMakeLists.txt.autosave  CMakeUserPresets.json  LICENSE  README.md  a.c  coderunner.cpp  coderunner.h  codetabwidget.h  editarea.cpp  editarea.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_editarea.cpp  newfile.h  pyrunner.cpp  pyrunner.h  res.qrc  res.rc  resourcemanager.cpp  resourcemanager.h  searchwidget.cpp  searchwidget.h  terminal.cpp  terminal.h
apis/: Python-3.11.api  cpp.api
res/: res.qrc  res.rc
res/theme/: dark.qss  light.qss
src/: coderunner.cpp  coderunner.h  codetabwidget.cpp  editarea.cpp  editarea.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  newfile.cpp  resourcemanager.cpp  resourcemanager.h  searchwidget.cpp  searchwidget.h  settingwidget.cpp  settingwidget.h  terminal.cpp  terminal.h  updatelogwidget.cpp  updatelogwidget.h
theme/: dark.qss  light.qss  test.qss
